--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <div class="hero-header">
         <div class="hero-image">
-            <img src="assets/img/background.jpg" alt="Sushi Restaurant">
+            <img src="assets/img/sushi.jpg" alt="Sushi Restaurant">
         </div>
         <div class="restaurant-logo">
             <img src="assets/icons/logo.png" alt="Bestell App Logo">
