Add cart overlay and mobile total bar

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
     <main>
         <section id="product-container">
         </section>
+        <div id="cart-overlay" class="cart-overlay"></div>
         <aside id="cart-container" class="hidden">
             <div class="cart-header">
                 <h2>Your Cart (<span id="total-items">0</span>)</h2>
@@ -113,6 +114,11 @@
             <button id="cart-btn">Checkout</button>
         </aside>
     </main>
+
+    <div id="mobile-cart-bar" class="mobile-cart-bar hidden">
+  <span class="mobile-cart-label">Total:</span>
+  <span id="mobile-cart-price" class="mobile-cart-price">5.00€</span>
+</div>
     
     <footer>
         <div class="footer-content">
