All changed during checklist

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="styles/restaurant.css">
     <link rel="stylesheet" href="styles/cart.css">
     <link rel="stylesheet" href="styles/notifications.css">
-
+    <script src="./scripts/db.js"></script>
+    <script src="./scripts/template.js" defer></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
 
@@ -130,9 +132,5 @@
             <p>&copy; 2025 Sushi Paradise. All rights reserved. | Made with ❤️ by Bestell App</p>
         </div>
     </footer>
-    
-    <script src="./scripts/db.js"></script>
-    <script src="./scripts/template.js"></script>
-    <script src="script.js"></script>
 </body>
 </html>
